# pydoc-builder

./: .gitignore  README.md  pyproject.toml
src/pydoc_builder/: __init__.py  builder.py  cli.py  config.py  discovery.py  docstrings.py  highlighting.py  layout.py  markdown.py  models.py  navigation.py  pages.py  parsing.py  rendering.py  utils.py  validation.py
tests/: __init__.py  test_docstrings.py  test_markdown.py  test_markdown_build.py
