[project]
name = "pydoc-builder"
version = "0.1.0"
description = "Static HTML documentation builder for Python projects, using only the standard library."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pydoc-builder = "pydoc_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydoc_builder"]
